tests/ui/ferrocene/compiler-arguments/upper_c_link-args/upper_c_link-args_empty.rs
//@ check-fail
//@ compile-flags: -C link-args
//~? ERROR requires a space-separated list of strings

fn main() {}

// ferrocene-annotations: um_rustc_C_link_args
